--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="top">
+    <div id="top">
         <h1>Getting Hungry Yet?</h1>
     </div>
 
